@@ -108,6 +108,10 @@ CHANGES
     this might be better as an exception but
     it's not critical either way.  [ticket:2325]
 
+  - [feature] IdentitySet supports the - operator
+    as the same as difference(), handy when dealing 
+    with Session.dirty etc. [ticket:2301]
+
 - sql
    - [bug] related to [ticket:2316], made some 
      adjustments to the change from [ticket:2261]
